// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Activity renders correctly 1`] = `
<_default
  appVersionEvents={
    Array [
      Object {
        "createdAt": 2018-09-20T12:42:31.000Z,
        "createdAtTimestamp": 1537447351000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "success",
        "text": "Event finished successfully!",
        "updatedAt": 2018-09-21T12:42:31.000Z,
        "updatedAtTimestamp": 1537533751000,
      },
      Object {
        "createdAt": 2018-09-22T12:42:31.000Z,
        "createdAtTimestamp": 1537620151000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "in_progress",
        "text": "Doing something...",
        "updatedAt": 2018-09-25T12:42:31.000Z,
        "updatedAtTimestamp": 1537879351000,
      },
      Object {
        "createdAt": 2018-09-26T12:42:31.000Z,
        "createdAtTimestamp": 1537965751000,
        "id": "1234",
        "isLogAvailable": true,
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "failed",
        "text": "An error occured.",
        "updatedAt": 2018-09-27T12:42:31.000Z,
        "updatedAtTimestamp": 1538052151000,
      },
    ]
  }
  isLoading={false}
/>
`;

exports[`Activity renders correctly when loading 1`] = `
<_default
  appVersionEvents={
    Array [
      Object {
        "createdAt": 2018-09-20T12:42:31.000Z,
        "createdAtTimestamp": 1537447351000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "success",
        "text": "Event finished successfully!",
        "updatedAt": 2018-09-21T12:42:31.000Z,
        "updatedAtTimestamp": 1537533751000,
      },
      Object {
        "createdAt": 2018-09-22T12:42:31.000Z,
        "createdAtTimestamp": 1537620151000,
        "id": "1234",
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "in_progress",
        "text": "Doing something...",
        "updatedAt": 2018-09-25T12:42:31.000Z,
        "updatedAtTimestamp": 1537879351000,
      },
      Object {
        "createdAt": 2018-09-26T12:42:31.000Z,
        "createdAtTimestamp": 1537965751000,
        "id": "1234",
        "isLogAvailable": true,
        "logDownloadUrl": "https://www.bitrise.io/assets/svg/logo-bitrise.svg",
        "status": "failed",
        "text": "An error occured.",
        "updatedAt": 2018-09-27T12:42:31.000Z,
        "updatedAtTimestamp": 1538052151000,
      },
    ]
  }
  isLoading={true}
/>
`;

exports[`ActivityView when a test failed with logs available renders entry with download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableBody>
      <TableRow
        key="0"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-26 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 26, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="red-3"
                    name="CloseSmall"
                    size="1.5rem"
                  />
                  <Text
                    color="red-3"
                    size="x3"
                  >
                    An error occured.
                  </Text>
                </Flex>
              </Base>
            </Base>
            <a
              href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
            >
              <Button
                level="secondary"
                size="small"
              >
                <Icon
                  color="grape-4"
                  name="Download"
                  size="1.5rem"
                />
                Download Build Log
              </Button>
            </a>
          </Flex>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when a test failed with logs not available yet renders entry with disabled download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableBody>
      <TableRow
        key="0"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-26 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 26, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="red-3"
                    name="CloseSmall"
                    size="1.5rem"
                  />
                  <Text
                    color="red-3"
                    size="x3"
                  >
                    An error occured.
                  </Text>
                </Flex>
              </Base>
            </Base>
            <Button
              disabled={true}
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </Flex>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when a test is in progress renders entry without download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableBody>
      <TableRow
        key="0"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-22 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 22, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="green-4"
                    name="Tick"
                    size="1.5rem"
                  />
                  <Text
                    color="grape-4"
                    size="x3"
                  >
                    Doing something...
                  </Text>
                </Flex>
              </Base>
            </Base>
            <Button
              disabled={true}
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </Flex>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when a test is successful renders entry without download log button 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableBody>
      <TableRow
        key="0"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-20 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 20, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="green-4"
                    name="Tick"
                    size="1.5rem"
                  />
                  <Text
                    color="grape-4"
                    size="x3"
                  >
                    Event finished successfully!
                  </Text>
                </Flex>
              </Base>
            </Base>
            <Button
              disabled={true}
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </Flex>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when viewed on desktop renders the activity view correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableHeader>
      <TableHeaderRow>
        <TableHeaderCell>
          Date
        </TableHeaderCell>
        <TableHeaderCell
          colSpan="2"
        >
          Activity
        </TableHeaderCell>
      </TableHeaderRow>
    </TableHeader>
    <TableBody>
      <TableRow
        key="0"
      >
        <TableCell
          title="2018-09-20 12:42:31"
        >
          September 20, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="green-4"
              name="Tick"
              size="1.5rem"
            />
            <Text
              color="grape-4"
              size="x3"
            >
              Event finished successfully!
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        />
      </TableRow>
      <TableRow
        key="1"
      >
        <TableCell
          title="2018-09-22 12:42:31"
        >
          September 22, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="green-4"
              name="Tick"
              size="1.5rem"
            />
            <Text
              color="grape-4"
              size="x3"
            >
              Doing something...
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        />
      </TableRow>
      <TableRow
        key="2"
      >
        <TableCell
          title="2018-09-26 12:42:31"
        >
          September 26, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="red-3"
              name="CloseSmall"
              size="1.5rem"
            />
            <Text
              color="red-3"
              size="x3"
            >
              An error occured.
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        >
          <a
            href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
          >
            <Button
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </a>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when viewed on desktop renders the activity view correctly while loading 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableHeader>
      <TableHeaderRow>
        <TableHeaderCell>
          Date
        </TableHeaderCell>
        <TableHeaderCell
          colSpan="2"
        >
          Activity
        </TableHeaderCell>
      </TableHeaderRow>
    </TableHeader>
    <TableBody>
      <TableRow
        key="0"
      >
        <TableCell
          title="2018-09-20 12:42:31"
        >
          September 20, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="green-4"
              name="Tick"
              size="1.5rem"
            />
            <Text
              color="grape-4"
              size="x3"
            >
              Event finished successfully!
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        />
      </TableRow>
      <TableRow
        key="1"
      >
        <TableCell
          title="2018-09-22 12:42:31"
        >
          September 22, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="green-4"
              name="Tick"
              size="1.5rem"
            />
            <Text
              color="grape-4"
              size="x3"
            >
              Doing something...
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        />
      </TableRow>
      <TableRow
        key="2"
      >
        <TableCell
          title="2018-09-26 12:42:31"
        >
          September 26, 2018
           at 
          12:42:31
        </TableCell>
        <TableCell>
          <Flex
            alignChildrenVertical="middle"
            direction="horizontal"
            gap="x4"
            height="2rem"
          >
            <Icon
              color="red-3"
              name="CloseSmall"
              size="1.5rem"
            />
            <Text
              color="red-3"
              size="x3"
            >
              An error occured.
            </Text>
          </Flex>
        </TableCell>
        <TableCell
          shrink={true}
        >
          <a
            href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
          >
            <Button
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </a>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;

exports[`ActivityView when viewed on mobile renders the activity view correctly 1`] = `
<Base
  paddingVertical="x8"
>
  <Table
    type="flat"
  >
    <TableBody>
      <TableRow
        key="0"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-20 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 20, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="green-4"
                    name="Tick"
                    size="1.5rem"
                  />
                  <Text
                    color="grape-4"
                    size="x3"
                  >
                    Event finished successfully!
                  </Text>
                </Flex>
              </Base>
            </Base>
            <Button
              disabled={true}
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </Flex>
        </TableCell>
      </TableRow>
      <TableRow
        key="1"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-22 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 22, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="green-4"
                    name="Tick"
                    size="1.5rem"
                  />
                  <Text
                    color="grape-4"
                    size="x3"
                  >
                    Doing something...
                  </Text>
                </Flex>
              </Base>
            </Base>
            <Button
              disabled={true}
              level="secondary"
              size="small"
            >
              <Icon
                color="grape-4"
                name="Download"
                size="1.5rem"
              />
              Download Build Log
            </Button>
          </Flex>
        </TableCell>
      </TableRow>
      <TableRow
        key="2"
        style={
          Object {
            "display": "block",
          }
        }
      >
        <TableCell
          style={
            Object {
              "display": "block",
            }
          }
          title="2018-09-26 12:42:31"
        >
          <Flex
            alignChildrenHorizontal="between"
            alignChildrenVertical="end"
            direction="horizontal"
            wrap={true}
          >
            <Base>
              <Base>
                September 26, 2018
                 at 
                12:42:31
              </Base>
              <Base>
                <Flex
                  alignChildrenVertical="middle"
                  direction="horizontal"
                  gap="x4"
                  height="2rem"
                >
                  <Icon
                    color="red-3"
                    name="CloseSmall"
                    size="1.5rem"
                  />
                  <Text
                    color="red-3"
                    size="x3"
                  >
                    An error occured.
                  </Text>
                </Flex>
              </Base>
            </Base>
            <a
              href="https://www.bitrise.io/assets/svg/logo-bitrise.svg"
            >
              <Button
                level="secondary"
                size="small"
              >
                <Icon
                  color="grape-4"
                  name="Download"
                  size="1.5rem"
                />
                Download Build Log
              </Button>
            </a>
          </Flex>
        </TableCell>
      </TableRow>
    </TableBody>
  </Table>
</Base>
`;
